--- a/inicio.html
+++ b/inicio.html
@@ -1,146 +1,161 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Via Ticket</title>
-        <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
-            integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-        <link rel="stylesheet" href="assets/css/style.css">      
-    </head>
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Via Ticket</title>
+  <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <link rel="stylesheet" href="assets/css/style.css">
+</head>
+
 <body>
-<header>
+  <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Via Ticket</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="inicio.html">INICIO</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="caracteristicas.html">CARACTERÍSTICAS</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    TICKETS
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="newTicket.html">NUEVO TICKET</a></li>
-                  <li><a class="dropdown-item" href="#">TICKETS ABIERTOS</a></li>
-                  <li><a class="dropdown-item" href="historial.html">HISTORIAL</a></li>                 
-                </ul>
-              </li>              
-            </ul>
-            <form class="d-flex" role="search">
-              <button class="btn btn-outline-light me-2" id="perfil"type="submit"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
-                <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6Zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0Zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4Zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10Z"/>
-              </svg> </button> 
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Via Ticket</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="inicio.html">DASHBOARD</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="caracteristicas.html">CARACTERÍSTICAS</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                TICKETS
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="newTicket.html">NUEVO TICKET</a></li>
+                <li><a class="dropdown-item" href="#">TICKETS ABIERTOS</a></li>
+                <li><a class="dropdown-item" href="historial.html">HISTORIAL</a></li>
+              </ul>
+            </li>
+          </ul>
+          <form class="d-flex" role="search">
+            <div class="dropdown me-2">
+              <button class="btn btn-outline-light dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
+                  <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6Zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0Zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4Zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10Z"/>
+                </svg>
+              </button>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="perfil.html">Perfil</a></li>
+                <li><a class="dropdown-item" href="#">Cambio Contraseña</a></li>
+                <li><a class="dropdown-item" href="#">Cerrar Sesión</a></li>
+              </ul>
+            </div>
+            <input class="form-control me-2" type="search" placeholder="BUSCAR" aria-label="Search">
+            <button class="btn btn-outline-light" type="submit">BUSCAR</button>
+          </form>
+        </div>
+      </div>
+    </nav>
+  </header>
+  <div class="container-fluid">
+    <div class="row position-relative">
+      <div class="col-lg-9 col-md-12 col-sm-12">
+        <canvas id="grafica"></canvas>      
+      </div>      
+      <div class="col-lg-3 col-md-12 col-sm-12">
+        <div class="col-md-12 col-sm-12">
+          <h3>Tickets Prioritarios</h3>
+          <div class="mt-2 col-lg-12 col-md-4 col-sm-6 ">
+            <div class="card text-bg-danger">
+              <div class="card-body">
+                <h5 class="card-title">Reportes repetidos</h5>
+                <p class="card-text">Se estan duplicando los reportes</p>
+                <a href="#" class="btn btn-primary">Ir Al ticket</a>
+              </div>
+            </div>
+          </div>
+          <div class="mt-2 col-lg-12 col-md-4 col-sm-6">
+            <div class="card text-bg-warning">
+              <div class="card-body">
+                <h5 class="card-title">Nuevo Desarrollo</h5>
+                <p class="card-text">Nuevo Modulo de ventas</p>
+                <a href="#" class="btn btn-primary">Ir Al ticket</a>
+              </div>
+            </div>
+          </div>
+          <div class="mt-2 col-lg-12 col-md-4 col-sm-6">
+            <div class="card text-bg-info">
+              <div class="card-body">
+                <h5 class="card-title">Nuevo Desarrollo</h5>
+                <p class="card-text">Nuevo Modulo de ventas</p>
+                <a href="#" class="btn btn-primary">Ir Al ticket</a>
+              </div>
+            </div>
+          </div>
+          <div class="mt-2 col-lg-12 col-md-4 col-sm-6">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">Nuevo Desarrollo</h5>
+                <p class="card-text">Nuevo Modulo de ventas</p>
+                <a href="#" class="btn btn-primary">Ir Al ticket</a>
+              </div>
+            </div>
+          </div>
+          <div class="mt-2 col-lg-12 col-md-4 col-sm-6">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">Nuevo Desarrollo</h5>
+                <p class="card-text">Nuevo Modulo de ventas</p>
+                <a href="#" class="btn btn-primary">Ir Al ticket</a>
+              </div>
+            </div>
+          </div>
+          <div class="mt-2 col-lg-12 col-md-4 col-sm-6">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">Nuevo Desarrollo</h5>
+                <p class="card-text">Nuevo Modulo de ventas</p>
+                <a href="#" class="btn btn-primary">Ir Al ticket</a>
+              </div>
+            </div>
+          </div>
+        </div>        
+      </div>      
+      <div class="col-lg-9 col-md-12 col-sm-12">
+        <div class="clearfix mt-4">
+          <img src="assets/img/team.jpg" class="rounded col-md-6 float-md-end mb-3 ms-md-3 col-sm-12" alt="...">
+          <h2>Acerca de Nosotros</h2>
+          <p>
+            A paragraph of placeholder text. We're using it here to show the use of the clearfix class. We're adding
+            quite a few meaningless phrases here to demonstrate how the columns interact here with the floated image.
+          </p>
 
-              <input class="form-control me-2" type="search" placeholder="BUSCAR" aria-label="Search">
-              <button class="btn btn-outline-light" type="submit">BUSCAR</button>
-            </form>
-          </div>
-        </div>
-      </nav>
-</header>
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-lg-9 col-md-12 col-sm-12">
-    <canvas id="grafica"></canvas>
+          <p>
+            As you can see the paragraphs gracefully wrap around the floated image. Now imagine how this would look with
+            some actual content in here, rather than just this boring placeholder text that goes on and on, but actually
+            conveys no tangible information at. It simply takes up space and should not really be read.
+          </p>
 
-  </div>
-  <div class="col-lg-3 col-md-12 col-sm-12">
-    <div class="row col-md-12 col-sm-12">
-      <h3>Tickets Prioritarios</h3>
-      <div class="mt-2 col-lg-12 col-md-4 col-sm-6 ">
-        <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">Reportes repetidos</h5>
-            <p class="card-text">Se estan duplicando los reportes</p>
-            <a href="#" class="btn btn-primary">Ir Al ticket</a>
-          </div>
-        </div>
-      </div>
-      <div class="mt-2 col-lg-12 col-md-4 col-sm-6">
-        <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">Nuevo Desarrollo</h5>
-            <p class="card-text">Nuevo Modulo de ventas</p>
-            <a href="#" class="btn btn-primary">Ir Al ticket</a>
-          </div>
-        </div>
-      </div>
-      <div class="mt-2 col-lg-12 col-md-4 col-sm-6">
-        <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">Nuevo Desarrollo</h5>
-            <p class="card-text">Nuevo Modulo de ventas</p>
-            <a href="#" class="btn btn-primary">Ir Al ticket</a>
-          </div>
-        </div>
-      </div>
-      <div class="mt-2 col-lg-12 col-md-4 col-sm-6">
-        <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">Nuevo Desarrollo</h5>
-            <p class="card-text">Nuevo Modulo de ventas</p>
-            <a href="#" class="btn btn-primary">Ir Al ticket</a>
-          </div>
-        </div>
-      </div>
-      <div class="mt-2 col-lg-12 col-md-4 col-sm-6">
-        <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">Nuevo Desarrollo</h5>
-            <p class="card-text">Nuevo Modulo de ventas</p>
-            <a href="#" class="btn btn-primary">Ir Al ticket</a>
-          </div>
-        </div>
-      </div>
-      <div class="mt-2 col-lg-12 col-md-4 col-sm-6">
-        <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">Nuevo Desarrollo</h5>
-            <p class="card-text">Nuevo Modulo de ventas</p>
-            <a href="#" class="btn btn-primary">Ir Al ticket</a>
-          </div>
+          <p>
+            And yet, here you are, still persevering in reading this placeholder text, hoping for some more insights, or
+            some hidden easter egg of content. A joke, perhaps. Unfortunately, there's none of that here.
+          </p>
         </div>
       </div>
     </div>
-  </div>
-  <div class="col-lg-8 col-md-12 col-sm-12">
-    <div class="clearfix mt-4">
-      <img src="assets/img/team.jpg" class="rounded col-md-6 float-md-end mb-3 ms-md-3 col-sm-12" alt="...">
-      <h2>Acerca de Nosotros</h2>
-      <p>
-        A paragraph of placeholder text. We're using it here to show the use of the clearfix class. We're adding quite a few meaningless phrases here to demonstrate how the columns interact here with the floated image.
-      </p>
-    
-      <p>
-        As you can see the paragraphs gracefully wrap around the floated image. Now imagine how this would look with some actual content in here, rather than just this boring placeholder text that goes on and on, but actually conveys no tangible information at. It simply takes up space and should not really be read.
-      </p>
-    
-      <p>
-        And yet, here you are, still persevering in reading this placeholder text, hoping for some more insights, or some hidden easter egg of content. A joke, perhaps. Unfortunately, there's none of that here.
-      </p>
-    </div>
+
 
   </div>
-</div>
-  
-
-</div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-            crossorigin="anonymous"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/chart.js@latest/dist/Chart.min.js"></script>
-<script src="assets/js/viaticket.js"></script> 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+    crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@latest/dist/Chart.min.js"></script>
+  <script src="assets/js/viaticket.js"></script>
 </body>
+
 </html>
