--- a/dashboard.html
+++ b/dashboard.html
@@ -9,7 +9,10 @@
   <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.3/font/bootstrap-icons.min.css" integrity="sha512-YFENbnqHbCRmJt5d+9lHimyEMt8LKSNTMLSaHjvsclnZGICeY/0KYEeiHwD1Ux4Tcao0h60tdcMv+0GljvWyHg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.3/font/bootstrap-icons.min.css"
+    integrity="sha512-YFENbnqHbCRmJt5d+9lHimyEMt8LKSNTMLSaHjvsclnZGICeY/0KYEeiHwD1Ux4Tcao0h60tdcMv+0GljvWyHg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
@@ -37,7 +40,7 @@
               </a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="newTicket.html">NUEVO TICKET</a></li>
-                <li><a class="dropdown-item"  href="ticketsAbiertos.html">TICKETS ABIERTOS</a></li>
+                <li><a class="dropdown-item" href="ticketsAbiertos.html">TICKETS ABIERTOS</a></li>
                 <li><a class="dropdown-item" href="historial.html">HISTORIAL</a></li>
               </ul>
             </li>
@@ -66,99 +69,132 @@
       <div class="col-lg-9 col-md-12 col-sm-12 float-lg-start">
         <canvas id="grafica"></canvas>
       </div>
-      <div class="col col-sm-6 col-md-4 col-lg-3  float-lg-end">
+      <div class="col col-sm-12 col-md-12 col-lg-3 float-lg-end">
 
         <h3>Tickets Prioritarios</h3>
-        <div class="row row-cols-lg-auto">
-          <div class="mt-2 col col-lg-12 col-md-12 col-sm-12">
-            <div class="card text-bg-danger">
-              <div class="card-body">
-                <h5 class="card-title">Reportes de Errores - 22/11/2022</h5>
-                <p class="card-text">Se estan duplicando los Informes</p>
-                <a href="#" class="btn btn-primary">Ir Al ticket</a>
+        <div class="container">
+          <div class="row">
+            <div class="mt-2 col- col-lg-12 col-md-6 col-sm-12">
+              <div class="card text-bg-danger">
+                <div class="card-body">
+                  <h5 class="card-title">Reporte de Error - 22/11/2022</h5>
+                  <p class="card-text">Se estan duplicando los Informes</p>
+                  <a href="#" class="btn btn-primary">Ir Al ticket</a>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="mt-2 col col-lg-12 col-md-12 col-sm-12">
-            <div class="card text-bg-warning">
-              <div class="card-body">
-                <h5 class="card-title">Nuevo Desarrollo - 12/12/2022</h5>
-                <p class="card-text">Nuevo Modulo de ventas</p>
-                <a href="#" class="btn btn-primary">Ir Al ticket</a>
+            <div class="mt-2 col- col-lg-12 col-md-6 col-sm-12">
+              <div class="card text-bg-warning">
+                <div class="card-body">
+                  <h5 class="card-title">Nuevo Desarrollo - 12/12/2022</h5>
+                  <p class="card-text">Nuevo Modulo de ventas</p>
+                  <a href="#" class="btn btn-primary">Ir Al ticket</a>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="mt-2 col col-lg-12 col-md-12 col-sm-12">
-            <div class="card text-bg-info">
-              <div class="card-body">
-                <h5 class="card-title">Mesa de Ayuda - 04/01/2023</h5>
-                <p class="card-text">Rebotan los correos</p>
-                <a href="#" class="btn btn-primary">Ir Al ticket</a>
+            <div class="mt-2 col- col-lg-12 col-md-6 col-sm-12">
+              <div class="card text-bg-info">
+                <div class="card-body">
+                  <h5 class="card-title">Mesa de Ayuda - 04/01/2023</h5>
+                  <p class="card-text">Rebotan los correos</p>
+                  <a href="#" class="btn btn-primary">Ir Al ticket</a>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="mt-2 col col-lg-12 col-md-12 col-sm-12">
-            <div class="card text-bg-info">
-              <div class="card-body">
-                <h5 class="card-title">Mesa de Ayuda - 05/01/2023</h5>
-                <p class="card-text">Crear nueva cuenta de correo</p>
-                <a href="#" class="btn btn-primary">Ir Al ticket</a>
+            <div class="mt-2 col- col-lg-12 col-md-6 col-sm-12">
+              <div class="card text-bg-info">
+                <div class="card-body">
+                  <h5 class="card-title">Mesa de Ayuda - 05/01/2023</h5>
+                  <p class="card-text">Crear nueva cuenta de correo</p>
+                  <a href="#" class="btn btn-primary">Ir Al ticket</a>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="mt-2 col col-lg-12 col-md-12 col-sm-12">
-            <div class="card text-bg-info">
-              <div class="card-body">
-                <h5 class="card-title">Mesa de Ayuda - 05/01/2023</h5>
-                <p class="card-text">bloquear cuenta</p>
-                <a href="#" class="btn btn-primary">Ir Al ticket</a>
+            <div class="mt-2 col- col-lg-12 col-md-6 col-sm-12">
+              <div class="card text-bg-info">
+                <div class="card-body">
+                  <h5 class="card-title">Mesa de Ayuda - 05/01/2023</h5>
+                  <p class="card-text">bloquear cuenta</p>
+                  <a href="#" class="btn btn-primary">Ir Al ticket</a>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="mt-2 col col-lg-12 col-md-12 col-sm-12">
-            <div class="card text-bg-info">
-              <div class="card-body">
-                <h5 class="card-title">Mesa de Ayuda - 05/01/2023</h5>
-                <p class="card-text">Instalacion de software</p>
-                <a href="#" class="btn btn-primary">Ir Al ticket</a>
+            <div class="mt-2 col- col-lg-12 col-md-6 col-sm-12">
+              <div class="card text-bg-info">
+                <div class="card-body">
+                  <h5 class="card-title">Mesa de Ayuda - 05/01/2023</h5>
+                  <p class="card-text">Instalacion de software</p>
+                  <a href="#" class="btn btn-primary">Ir Al ticket</a>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <div class="pe-3 col-lg-9 col-md-12 col-sm-6 float-lg-start">
-        <div class="clearfix mt-4">
-          <img src="assets/img/team.jpg" class="rounded col-md-6 float-md-end mb-3 ms-md-3 col-sm-12" alt="...">
-          <h2>Acerca de Nosotros</h2>
-          <p>
-            A paragraph of placeholder text. We're using it here to show the use of the clearfix class. We're adding
-            quite a few meaningless phrases here to demonstrate how the columns interact here with the floated image.
-          </p>
+      <div class="pe-3 col-lg-9 col-md-12 col-sm-12 float-lg-start">
+        <div class="container">
+          <div class="row">
+            <div class="clearfix mt-2">
+              <img src="assets/img/team.jpg" class="rounded col-md-6 float-md-end mb-3 ms-md-3 col-sm-12" alt="...">
+              <h2>Acerca de Nosotros</h2>
+              <p>
+                A paragraph of placeholder text. We're using it here to show the use of the clearfix class. We're adding
+                quite a few meaningless phrases here to demonstrate how the columns interact here with the floated
+                image.
+              </p>
 
-          <p>
-            As you can see the paragraphs gracefully wrap around the floated image. Now imagine how this would look with
-            some actual content in here, rather than just this boring placeholder text that goes on and on, but actually
-            conveys no tangible information at. It simply takes up space and should not really be read.
-          </p>
+              <p>
+                As you can see the paragraphs gracefully wrap around the floated image. Now imagine how this would look
+                with
+                some actual content in here, rather than just this boring placeholder text that goes on and on, but
+                actually
+                conveys no tangible information at. It simply takes up space and should not really be read.
+              </p>
 
-          <p>
-            And yet, here you are, still persevering in reading this placeholder text, hoping for some more insights, or
-            some hidden easter egg of content. A joke, perhaps. Unfortunately, there's none of that here.
-          </p>
+              <p>
+                And yet, here you are, still persevering in reading this placeholder text, hoping for some more
+                insights, or
+                some hidden easter egg of content. A joke, perhaps. Unfortunately, there's none of that here.
+              </p>
+            </div>
+            <div class="clearfix mt-2">
+              <img src="assets/img/team.jpg" class="rounded col-md-6 float-md-end mb-3 ms-md-3 col-sm-12" alt="...">
+              <h2>Acerca de Nosotros</h2>
+              <p>
+                A paragraph of placeholder text. We're using it here to show the use of the clearfix class. We're adding
+                quite a few meaningless phrases here to demonstrate how the columns interact here with the floated
+                image.
+              </p>
+
+              <p>
+                As you can see the paragraphs gracefully wrap around the floated image. Now imagine how this would look
+                with
+                some actual content in here, rather than just this boring placeholder text that goes on and on, but
+                actually
+                conveys no tangible information at. It simply takes up space and should not really be read.
+              </p>
+              <p>As you can see the paragraphs gracefully wrap around the floated image. Now imagine how this would look
+                with</p>
+              
+            </div>
+          </div>
         </div>
       </div>
 
-      
+
     </div>
   </div>
-  <hr>
+  
   <footer>
-    <div class="container">
-      <div class="row">
-        <span class="text-center"> Sistema web desarrollado por AnotherDislexicDev &#174;
-          <i class="bi fa-3x bi-git"></i>
-          <i class="bi fa-3x bi-linkedin"></i>
-          <i class="bi fa-3x bi-envelope-at"></i></span>
+    <div class="container ">
+      <hr>
+      <div class="row mt-2">
+        <div class="col-12">
+          <span class="text-center"> Sistema web desarrollado por AnotherDislexicDev &#174;
+            <i class="bi fa-3x bi-git"></i>
+            <i class="bi fa-3x bi-linkedin"></i>
+            <i class="bi fa-3x bi-envelope-at"></i></span>
+        </div>
       </div>
     </div>
   </footer>
