--- a/perfil.html
+++ b/perfil.html
@@ -97,9 +97,9 @@
   <div class="container">
     <div class="row">
      <span class="text-center"> Sistema web desarrollado por AnotherDislexicDev &#174; 
-      <i class="bi fa-3x fa-3x bi-git"></i>
-      <i class="bi fa-3x fa-3x bi-linkedin"></i>
-      <i class="bi fa-3x fa-3xbi-envelope-at"></i></span>
+      <i class="bi fa-3x bi-git"></i>
+      <i class="bi fa-3x bi-linkedin"></i>
+      <i class="bi fa-3x bi-envelope-at"></i></span>
     </div>
   </div>
 </footer>
