--- a/index.html
+++ b/index.html
@@ -1,100 +1,89 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title> Via Ticket</title>
-        <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
-            integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.3/font/bootstrap-icons.min.css" integrity="sha512-YFENbnqHbCRmJt5d+9lHimyEMt8LKSNTMLSaHjvsclnZGICeY/0KYEeiHwD1Ux4Tcao0h60tdcMv+0GljvWyHg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="stylesheet" href="assets/css/style.css">      
-    </head>
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title> Via Ticket</title>
+  <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.3/font/bootstrap-icons.min.css"
+    integrity="sha512-YFENbnqHbCRmJt5d+9lHimyEMt8LKSNTMLSaHjvsclnZGICeY/0KYEeiHwD1Ux4Tcao0h60tdcMv+0GljvWyHg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="assets/css/style.css">
+</head>
+
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top navbar-custom">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Via Ticket</a>
+        <a class="navbar-brand" href="index.html">Via Ticket</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-           
+
           </ul>
           <form class="d-flex" role="search">
-            
-              <button id="login" class="btn btn-outline-light me-2" type="button"  aria-expanded="false">
-                <i class="bi bi-person"></i>
-              </button>
+
+            <button id="login" class="btn btn-outline-light me-2" type="button" aria-expanded="false">
+              <i class="bi bi-person"></i>
+            </button>
             <input class="form-control me-2" type="search" placeholder="BUSCAR" aria-label="Search">
             <button class="btn btn-outline-light" type="submit">BUSCAR</button>
           </form>
         </div>
       </div>
     </nav>
+    <div> <img class="img-fluid" src="assets/img/slide 1.jpg" alt="organizacion de tareas"></div>
   </header>
-<div class="container-fluid">
-  <div id="carouselExampleIndicators" class="carousel carousel-dark slide" data-bs-ride="true">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-    </div>
-    <div class="carousel-inner">
-      <div class="carousel-item active" data-bs-interval="1000">
-        <img src="assets/img/slide 1.jpg" class="d-block w-100 noPad" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="assets/img/slide 2.jpg" class="d-block w-100 noPad" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="assets/img/slide 3.jpg" class="d-block w-100 noPad" alt="...">
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Anteriot</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Siguiente</span>
-    </button>
-  </div>
-  <div class="clearfix mt-4">
-    <img src="assets/img/team.jpg" class="rounded col-md-6 float-md-end mb-3 ms-md-3 col-sm-12" alt="...">
-    <h2>Acerca de Nosotros</h2>
-    <p>
-      A paragraph of placeholder text. We're using it here to show the use of the clearfix class. We're adding quite a few meaningless phrases here to demonstrate how the columns interact here with the floated image.
-    </p>
-  
-    <p>
-      As you can see the paragraphs gracefully wrap around the floated image. Now imagine how this would look with some actual content in here, rather than just this boring placeholder text that goes on and on, but actually conveys no tangible information at. It simply takes up space and should not really be read.
-    </p>
-  
-    <p>
-      And yet, here you are, still persevering in reading this placeholder text, hoping for some more insights, or some hidden easter egg of content. A joke, perhaps. Unfortunately, there's none of that here.
-    </p>
-  </div>
-</div>
-<hr>
-<footer>
+
   <div class="container">
     <div class="row">
-     <span class="text-center"> Sistema web desarrollado por AnotherDislexicDev &#174; 
+      <div class="col">
+
+        <div class="clearfix mt-4">
+          <img src="assets/img/team.jpg" class="rounded col-md-6 float-md-end mb-3 ms-md-3 col-sm-12" alt="...">
+          <h2>Acerca de Nosotros</h2>
+          <p>
+            A paragraph of placeholder text. We're using it here to show the use of the clearfix class. We're adding quite
+            a few meaningless phrases here to demonstrate how the columns interact here with the floated image.
+          </p>
+
+          <p>
+            As you can see the paragraphs gracefully wrap around the floated image. Now imagine how this would look with
+            some actual content in here, rather than just this boring placeholder text that goes on and on, but actually
+            conveys no tangible information at. It simply takes up space and should not really be read.
+          </p>
+
+          <p>
+            And yet, here you are, still persevering in reading this placeholder text, hoping for some more insights, or
+            some hidden easter egg of content. A joke, perhaps. Unfortunately, there's none of that here.
+          </p>
+        </div>
+      </div>
+    </div>
+    <hr>
+  </div>
+  <footer>
+
+    <span class="text-center"> Sistema web desarrollado por AnotherDislexicDev &#174;
       <i class="bi fa-3x bi-git"></i>
       <i class="bi fa-3x bi-linkedin"></i>
       <i class="bi fa-3x bi-envelope-at"></i></span>
-    </div>
-  </div>
-</footer>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-            crossorigin="anonymous"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
-<script src="assets/js/viaticket.js"></script>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+    crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+  <script src="assets/js/viaticket.js"></script>
 </body>
+
 </html>
